--- a/GAScore/testbench/am_tx.yaml
+++ b/GAScore/testbench/am_tx.yaml
@@ -1,5 +1,5 @@
 ################################################################################
-# JSON-Testbench Configuration File
+# Sonar Configuration File
 ################################################################################
 
 # Optional Meta Data #
@@ -17,47 +17,49 @@ Timescale: 1ns / 1ps #the default timescale of the simulation
 Time_Format: {unit: "1us", precision: 3} #can be one of s, ms, us, ns, ps, fs
 Flag_Count: 1
 
-Interfaces:
-  - axis
-
 ################################################################################
 
 # DUT #
 DUT:
   - {direction: input, name: ap_clk, type: clock, period: 20ns}
-  - {direction: input, name: ap_rst_n}
+  - {direction: input, name: ap_rst_n, type: reset}
   - {direction: output, size: 32, name: dbg_currentState}
-  - {direction: slave, name: axis_kernel, type: axis, clock: ap_clk, c_struct: axis_word, c_stream: uaxis_l,
-  channels: [
+  - {direction: slave, name: axis_kernel, type: axis, clock: ap_clk, 
+  c_struct: axis_word, c_stream: uaxis_l, channels: [
       {name: "TDATA", type: "tdata", size: 64},
+      {name: "TKEEP", type: "tkeep", size: 8},
       {name: "TVALID", type: "tvalid"},
       {name: "TREADY", type: "tready"},
       {name: "TLAST", type: "tlast"}
     ]}
-  - {direction: master, name: axis_net, type: axis, clock: ap_clk, c_struct: axis_word, c_stream: uaxis_l,
-  channels: [
+  - {direction: master, name: axis_net, type: axis, clock: ap_clk, 
+  c_struct: axis_word, c_stream: uaxis_l, channels: [
       {name: "TDATA", type: "tdata", size: 64},
+      {name: "TKEEP", type: "tkeep", size: 8},
       {name: "TVALID", type: "tvalid"},
       {name: "TREADY", type: "tready"},
       {name: "TLAST", type: "tlast"}
     ]}
-  - {direction: master, name: axis_mm2sCommand, type: axis, clock: ap_clk, c_struct: axis_word_mm2sCommand, c_stream: uaxis_l, 
-  channels: [
+  - {direction: master, name: axis_mm2sCommand, type: axis, clock: ap_clk, 
+  c_struct: axis_word_mm2sCommand, c_stream: uaxis_l, channels: [
       {name: "TDATA", type: "tdata", size: 64},
+      {name: "TKEEP", type: "tkeep", size: 8},
       {name: "TVALID", type: "tvalid"},
       {name: "TREADY", type: "tready"},
       {name: "TLAST", type: "tlast"}
     ]}
-  - {direction: slave, name: axis_mm2s, type: axis, clock: ap_clk, c_struct: axis_word, c_stream: uaxis_l,
-  channels: [
+  - {direction: slave, name: axis_mm2s, type: axis, clock: ap_clk, 
+  c_struct: axis_word, c_stream: uaxis_l, channels: [
       {name: "TDATA", type: "tdata", size: 64},
+      {name: "TKEEP", type: "tkeep", size: 8},
       {name: "TVALID", type: "tvalid"},
       {name: "TREADY", type: "tready"},
       {name: "TLAST", type: "tlast"}
     ]}
-  - {direction: slave, name: axis_mm2sStatus, type: axis, clock: ap_clk, c_struct: axis_word_mm2sStatus, c_stream: uaxis_l,
-  channels: [
+  - {direction: slave, name: axis_mm2sStatus, type: axis, clock: ap_clk, 
+  c_struct: axis_word_mm2sStatus, c_stream: uaxis_l, channels: [
       {name: "TDATA", type: "tdata", size: 8},
+      {name: "TKEEP", type: "tkeep", size: 1},
       {name: "TVALID", type: "tvalid"},
       {name: "TREADY", type: "tready"},
       {name: "TLAST", type: "tlast"}
@@ -395,9 +397,6 @@ Wait_Conditions:
   - {condition: "@(negedge ap_clk);", key: ap_clk}
 
 Test_Vectors:
-  # - Test_Vector_0: *Long_Message_D
-  # - Test_Vector_0: *Short_Message_A
-  # - Test_Vector_1: *Long_Message_B
   - Test_Vector_0: *Short_Message_A
   - Test_Vector_1: *Short_Message_B
   - Test_Vector_2: *Medium_Message_A
