--- a/GAScore/testbench/xpams.yaml
+++ b/GAScore/testbench/xpams.yaml
@@ -1,5 +1,5 @@
 ################################################################################
-# JSON-Testbench Configuration File
+# Sonar Configuration File
 ################################################################################
 
 # Optional Meta Data #
@@ -17,40 +17,34 @@ Timescale: 1ns / 1ps #the default timescale of the simulation
 Time_Format: {unit: "1us", precision: 3} #can be one of s, ms, us, ns, ps, fs
 Flag_Count: 1
 
-Interfaces:
-  - axis
-
 ################################################################################
 
 # DUT #
 DUT:
   - {direction: input, name: ap_clk, type: clock, period: 20ns}
-  - {direction: input, name: ap_rst_n}
+  - {direction: input, name: ap_rst_n, type: reset}
   - {direction: output, size: 32, name: dbg_currentState}
-  - {direction: slave, name: axis_rx, type: axis, clock: ap_clk, c_struct: axis_word, c_stream: uaxis_l,
-  channels: [
+  - {direction: slave, name: axis_rx, type: axis, clock: ap_clk, 
+  c_struct: axis_word, c_stream: uaxis_l, channels: [
       {name: "TDATA", type: "tdata", size: 64},
+      {name: "TKEEP", type: "tkeep", size: 8},
       {name: "TVALID", type: "tvalid"},
       {name: "TREADY", type: "tready"},
       {name: "TLAST", type: "tlast"}
     ]}
-  - {direction: master, name: axis_tx, type: axis, clock: ap_clk, c_struct: axis_word, c_stream: uaxis_l,
-  channels: [
+  - {direction: master, name: axis_tx, type: axis, clock: ap_clk, 
+  c_struct: axis_word, c_stream: uaxis_l, channels: [
       {name: "TDATA", type: "tdata", size: 64},
+      {name: "TKEEP", type: "tkeep", size: 8},
       {name: "TVALID", type: "tvalid"},
       {name: "TREADY", type: "tready"},
       {name: "TLAST", type: "tlast"}
     ]}
-  - {direction: master, name: axis_kernel_out, type: axis, clock: ap_clk, c_struct: axis_wordDest, c_stream: uaxis_m,
-  channels: [
+  - {direction: master, name: axis_kernel_out, type: axis, clock: ap_clk, 
+  c_struct: axis_wordDest, c_stream: uaxis_m, channels: [
       {name: "TDATA", type: "tdata", size: 64},
-      {name: "TVALID", type: "tvalid"},
-      {name: "TREADY", type: "tready"},
-      {name: "TLAST", type: "tlast"}
-    ]}
-  - {direction: slave, name: axis_kernel_in, type: axis, clock: ap_clk, c_struct: axis_word, c_stream: uaxis_l,
-  channels: [
-      {name: "TDATA", type: "tdata", size: 64},
+      {name: "TKEEP", type: "tkeep", size: 8},
+      {name: "TDEST", type: "tdest", size: 4},
       {name: "TVALID", type: "tvalid"},
       {name: "TREADY", type: "tready"},
       {name: "TLAST", type: "tlast"}
@@ -142,8 +136,6 @@ Wait_Conditions:
   - {condition: "@(negedge ap_clk);", key: ap_clk}
 
 Test_Vectors:
-  # - Test_Vector_0: *Medium_Message_A
-  # - Test_Vector_1: *Long_Message_A
   - Test_Vector_0: *Short_Message_A
   - Test_Vector_1: *Medium_Message_A
   - Test_Vector_2: *Long_Message_A
